Bug 876133. Ensure output audio volume is updated when 'volume' attribute is set on media element. r=cpearce,a=akeybl